--- a/styles.css
+++ b/styles.css
@@ -171,6 +171,9 @@ body {
 
 .container .container-content .videos-container .videos .video-content {
     margin: 5px 10px;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
 
 .container .container-content .videos-container .videos .video-content .video-title {
@@ -194,6 +197,8 @@ body {
 .container .container-content .videos-container .videos .video-content .video-metadata-wrapper {
     display: flex;
     justify-content: end;
+    margin-top: auto;
+    margin-bottom: 5px;
 }
 
 .container .container-content .videos-container .videos .video-content .video-metadata-wrapper .video-metadata {
